--- a/sections/0_sections.pug
+++ b/sections/0_sections.pug
@@ -2,3 +2,7 @@
 //- You can do so like this:
 //- include {filename}.pug 
 //- Do this for every section you want to have in the slideshow
+include ../templates/cool-stuff.pug
+include ../templates/iframe-background.pug
+include ../templates/logo-span.pug
+include mixins.pug
