--- a/sections/mixins.pug
+++ b/sections/mixins.pug
@@ -11,3 +11,6 @@ mixin TezosLogo(height='100px')
 
 mixin EtherLogo(height='175px')
   +LogoSpan("assets/Ethereum-Logo.png", height)
+
+mixin AventineLogo(height='120px')
+  +LogoSpan("assets/aventine.png")
