--- a/templates/slide-show.pug
+++ b/templates/slide-show.pug
@@ -27,3 +27,9 @@ script.
   // Learn about plugins: https://revealjs.com/plugins/
   plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
   });
+  Reveal.configure({
+    keyboard: {
+        38: 'prev',
+        40: 'next'
+    }
+  });
