--- a/templates/cool-stuff.pug
+++ b/templates/cool-stuff.pug
@@ -12,3 +12,7 @@ mixin gradientH1
 mixin gradientH2 
   h2(style="background: linear-gradient(to right, #2C7DF7 0%, #5B87DA 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent;")
     block
+
+mixin gradientH3
+  h3(style="background: linear-gradient(to right, #2C7DF7 0%, #5B87DA 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent;")
+    block
