--- a/sections/0_sections.pug
+++ b/sections/0_sections.pug
@@ -8,7 +8,7 @@ include mixins.pug
 
 section
   section
-    h2 Aventine Communication Strategy
+    h2 Aventine Crisis Communication Strategy
     p(style="color: gray;") Platypus Cyber Security
 
 section
@@ -31,21 +31,22 @@ section
     h3 Crisis Communication Strategy
     .fragment
       p Values
-      p General
-      p Target groups
+      p General Message
+      p Target Groups
       p Communication Channels
-      p Measuring the effect
+      p Measuring the Effect
 
 section
   section
     +gradientH3 Values
-    p Reliable
-    p Expert
+    p Reliability
+    p Expertise
     p Long term sustainability
   section
     +gradientH3 General Message
     p Explain the problem
-    p What does it mean?
+    p Transparent where possible
+    p "What does it mean for me?"
   section
     +gradientH3 Target Groups
     p Employees
@@ -66,8 +67,12 @@ section
     +gradientH3 Measuring the Effect
     p Feedback from the managers
     p Twitter mentions (Hashtags)
-    p Support will receive calls and will be instructed
+    p Support Team will be instructed
 
 section
   section
     +gradientH3 Your Thoughts and Worries
+
+section
+  div
+    img(src="assets/Screenshot from 2022-09-06 16-00-28.png")
