Start SDM Presentation

--- a/sections/0_sections.pug
+++ b/sections/0_sections.pug
@@ -9,12 +9,12 @@ include mixins.pug
 section
   include 1_introduction.pug
 section
-  include 2_Tezos.pug
+  include 2_requirements
 section
-  include 3_Presto.pug
+  include 3_paper_summary
 section 
-  include 4_Presto_Plugins.pug
+  include 4_proposed_model
 section 
-  include 5_Planning.pug
+  include 5_our_solution
 section 
   include thanks.pug
