Add images and sections

--- a/sections/3_paper_summary.pug
+++ b/sections/3_paper_summary.pug
@@ -1,2 +1,17 @@
 section
-  h2 ABE Scheme
+  h2 Encryption Scheme
+
++iFrameBackground("https://eprint.iacr.org/2015/016.pdf")
+
+section
+  +gradientH2 Like the Multi-Auth ABE schemes in the lectures 
+  h3
+    +whiteOnBlackSpan Except...
+  .fragment Attribute-set does not need to be defined during setup 
+  .fragment The attribute-set can grow with this scheme
+
+
+section
+  +gradientH2 Why is this useful?
+  .fragment Nr. of doctors and patients not constant
+  .fragment We can now use UUIDs as attributes
