--- a/sections/5_our_solution.pug
+++ b/sections/5_our_solution.pug
@@ -1,17 +1,5 @@
 section 
-  +gradientH1 Planning
+  +gradientH1 Our Solution
 
 section
-  +gradientH2 Week 1
-  p Familiarising with the tools
-  p Try to get the Ethereum plugin working
-  p Familiarise with the ETH plugin
-
-section
-  +gradientH2 Week 2
-  p Check what's necessary to make it work with Tezos
-  p Start designing our plugin
-section
-  +gradientH2 Week 3-4-5
-  p Implementation phase
-  p Create the presentation
+  h1 TODO
