Remove some lines in proposed model

--- a/sections/4_proposed_model.pug
+++ b/sections/4_proposed_model.pug
@@ -9,8 +9,8 @@ section
   
 +animate
   +gradientH2 Global Authority
-  .fragment Generate global parameters
-  .fragment That's it :)
+  p Generate global parameters
+  p That's it :)
     
 +animate
   h2 Global Authority
@@ -19,8 +19,8 @@ section
   h2 Database
 +animate
   +gradientH2 Local Authority
-  .fragment Creates keys for the clients
-  .fragment Decides what attributes the clients have
+  p Creates keys for the clients
+  p Decides what attributes the clients have
     
 +animate
   h2 Global Authority
@@ -30,9 +30,9 @@ section
   
 +animate
   +gradientH2 Client
-  .fragment Can be any party in the system
-  .fragment Has its own UUID
-  .fragment Can grant write access to the database for its own PHR
+  p Can be any party in the system
+  p Has its own UUID
+  p Can grant write access to the database for its own PHR
     
 +animate
   h2 Global Authority
@@ -42,16 +42,16 @@ section
   
 +animate
   +gradientH2 Database
-  .fragment Contains encrypted data
-  .fragment Enforces write access
+  p Contains encrypted data
+  p Enforces write access
   
 +animate
   h1 Encryption
 +animate
   +gradientH1 Encryption
-  .fragment Hybrid Approach
-  .fragment Message -> Symmetric Encryption
-  .fragment Symmetric Key -> Previously mentioned ABE Scheme
+  p Hybrid Approach
+  p Message -> Symmetric Encryption
+  p Symmetric Key -> Previously mentioned ABE Scheme
     
 section
   img(src="assets/Reading.png", alt="")
