Add new templates and refactor pug files

--- a/index.pug
+++ b/index.pug
@@ -1,4 +1,4 @@
-extends templates/slide-show.pug
+extends pug/templates/slide-show.pug
 
 block slides
-  include sections/0_sections.pug
+  include pug/sections/0_sections.pug
