--- a/pug/templates/cool-stuff.pug
+++ b/pug/templates/cool-stuff.pug
@@ -22,3 +22,7 @@ mixin whiteOnBlackSpan
   span(style="background-color: black;color: white;")
     block
 
+mixin LogoSpan(logo, height='100px')
+  span(style="position: relative; top: 40px; margin-right: 25px") 
+    img(src=logo, alt="" height=height) 
+
