--- a/css/theme/source/extendas.scss
+++ b/css/theme/source/extendas.scss
@@ -15,7 +15,7 @@
 
 
 // Include theme-specific fonts
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300&family=Merriweather:wght@900&family=Overpass:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300&family=Merriweather:wght@400;900&family=Overpass:wght@200&display=swap');
 
 // Override theme settings (see ../template/settings.scss)
 $mainFont: 'Overpass', sans-serif;
@@ -43,11 +43,17 @@ $selectionBackgroundColor: rgba(61, 61, 61, 0.99);
     display: block;
     left: 8px;
     bottom: 8px;
-    z-index: 31;
-    width: 100px;
-    height: 100px;
+    // z-index: 31;
+    width: 150px;
+    height: 150px;
     background-image: url('../img/extendas-logo.svg');
-    background-size: 80px;
+    background-size: 150px;
     background-position: 0% 100%;
     background-repeat: no-repeat;
+}
+
+.title-state h2 {
+    font-size: 30px;
+    font-weight: normal;
+    font-style: italic;
 }
